# ScraperV4

./: .gitignore  .readthedocs.yaml  CLAUDE.md  INTEGRATION_REPORT.md  README.md  push_wiki.py  pyproject.toml  requirements.txt  test_templates.py
.VSCodeCounter/2025-08-16_23-15-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/: README.md  changelog.md  conf.py  index.md  index.rst  requirements.txt
docs/docs/: .buildinfo  README.html  changelog.html  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
docs/examples/: README.md
docs/explanations/: interactive-architecture.md  scaling-architecture.md  service-container.md  stealth-technology.md
docs/how-to/: configure-proxies.md  debug-failures.md  handle-anti-bot.md  optimize-performance.md  scale-operations.md  visual-template-creation.md
docs/reference/: interactive-api.md
old_interactive_v3/: auto_detector.js  communication_bridge.js  debug_helper.js  detail_page_analyzer.py  interactive_overlay.js  interactive_readme.md  learning_service.js  subpage_detail_extractor.js
prompts/: phase1a_environment_setup.md  phase1b_project_structure.md  phase1c_eel_application_architecture.md  phase2_core_backend_development.md  phase3_frontend_development.md
src/: main.py
templates/: Wdijwdi.json  example_advanced_template.json  persistent_template.json  test_template.json
tests/: README_comprehensive_tests.md  __init__.py  conftest.py  test_async_scraping.py  test_data_service_security.py  test_scraping_preview.py  test_scrapling_comprehensive.py
web/: debug.html  index.html  interactive-proxy.html
wiki/: README.md
(+206 files in other folders)
